# serial-mcp

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
serial_mcp/: mcp_server.py  serial_manager.py  webapp.py
serial_mcp/static/: style.css
serial_mcp/static/js/: main.js
serial_mcp/templates/: index.html
simulation/: README.md  firmware_simulator.py
tests/: reproduce_issue.py  reproduce_log_sync.py  reproduce_wait_issue.py  test_clear_logs.py  test_config_persistence.py  test_export.py  test_firmware_simulator_unit.py  test_integration.py  test_manager_cleanup.py  test_registry.py  test_send.py  test_serial_manager_v2.py  test_virtual_scroll_logic.py  test_vite.py  test_wait.py  test_wait_between.py  test_webapp.py  test_webapp_args.py  test_ws_disconnect.py
