[project]
name = "serial-mcp-server"
version = "0.1.0"
description = "Serial MCP Server with web UI, auto-send, log filters, and synchronous log capture."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "modelcontextprotocol[cli]>=0.1.5",
  "pyserial>=3.5",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "websockets>=12.0",
]

[project.scripts]
serial-mcp-stdio = "serial_mcp.mcp_server:run_stdio"
serial-mcp-http = "serial_mcp.mcp_server:run_http"
serial-mcp-web = "serial_mcp.webapp:run"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "anyio>=4.4.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["serial_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
